# Stock-Analysis-Assistant

./: README.md  main.py  pyproject.toml
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
server/: main.py  pyproject.toml
