[project]
name = "server"
version = "0.1.0"
description = "A FastAPI server for stock price prediction using LangChain and OpenAI."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "langchain[openai]>=1.3.14",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
    "yfinance>=1.5.1",
]
